# lerobot_policy_lam_lapa_enhanced

./: README.md  pyproject.toml
scripts/: check_available.py  export_lam_latents.py
src/lerobot_policy_lam/: __init__.py  configuration_lam.py  core_attention.py  core_model.py  core_nsvq.py  modeling_lam.py  processor_lam.py
src/lerobot_policy_lam_lapa/: __init__.py  configuration_lam.py  core_bottleneck.py  core_bottleneck_fusion.py  core_dino.py  core_model.py  modeling_lam.py
